--- a/src/index.html
+++ b/src/index.html
@@ -460,4 +460,8 @@
 
     <script src="./js/main.js"></script>
 </body>
+<!-- 
+  The design of this page was forked from https://freebiesbug.com/code-stuff/ellie/
+  and is licensed under GPLv3, which you can find here: https://www.gnu.org/licenses/gpl-3.0.en.html
+ -->
 </html>
